--- a/css/ciclose.css
+++ b/css/ciclose.css
@@ -25,11 +25,11 @@ header {
 
 a {
     color: #ffffff;
-    text-decoration: none;
+    text-decoration: overline;
 }
 
 a:hover {
-    text-decoration: none;
+    text-decoration: overline;
 }
 
 h1 {
