--- a/css/citoplasma.css
+++ b/css/citoplasma.css
@@ -17,30 +17,39 @@ header {
 header h1 {
     font-size: 2.5rem;
     color: #ffffff;
-}
-
-.navbar-custom .navbar-brand,
-.navbar-custom .nav-link {
-    color: #007bff;
-}
-
-.navbar-custom .nav-link:hover {
-    color: #0556ac; 
-}
-
-.container {
-    width: 80%;
-    margin: 20px auto;
-}
-
-h1, h2 {
-    font-family: 'Arial', sans-serif;
-    color: #343a40;
     font-weight: bold;
 }
 
-p {
-    margin: 10px 0;
+
+
+.navbar-custom .navbar-brand,
+.navbar-custom .nav-link {
+    color: #ffffff;
+}
+
+.navbar-custom .nav-link:hover {
+    color: #adb5b8; 
+}
+
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+h2 {
+    font-family: 'Arial', sans-serif;
+    color: #007bff;
+    font-weight: bold;
 }
 
 .content {
@@ -48,6 +57,14 @@ p {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.section {
+    background-color: #ffffff;
+    padding: 30px;
+    border-radius: 8px;
+    margin-bottom: 30px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 ul {
